--- a/web/worklog/public/index.html
+++ b/web/worklog/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #F5F5F5">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
