UI Updates, Addition of Settings and addition of Notes to Entries

--- a/web/worklog/public/index.html
+++ b/web/worklog/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #F5F5F5">
+  <body style="background-color: #DCDCDC">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
